# doodler_engine

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  tests.yaml
doodler_engine/: __init__.py  annotations_to_segmentations.py  app_funcs.py  defaults.py  image_segmentation.py  plot_utils.py
tests/: test_app_funcs.py
